# serializer version: 1
# name: test_edit_file_get
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Editing test.dj
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
    <script src="https://unpkg.com/@djot/djot@0.3.2/dist/djot.js">
    </script>
    <script src="/static/js/codejar.min.js">
    </script>
    <script src="/static/js/highlight.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/files">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/files">
           Yaks
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <div class="editor__header">
       <h1>
        Editing test.dj
       </h1>
      </div>
      <form hx-post="/edit" hx-swap="none" hx-vals="js:{content: getEditorContent()}" id="editor_form" method="post">
       <input name="file" type="hidden" value="/private/var/folders/wn/fg9n8vkn6vq104ghhj4_mqpw0000gn/T/pytest-of-kyleking/pytest-1/test_edit_file_get0/test.dj"/>
       <div class="editor" data-gramm="false" data-manual="">
       </div>
       <div class="editor__actions">
        <button class="button button--primary" id="save-btn" type="submit">
         Save Changes
        </button>
        <span class="editor__status" id="save-status">
        </span>
       </div>
      </form>
     </div>
    </main>
    <script>
     window.serverContent = "Test file content";
    </script>
    <script src="/static/js/editor.js" type="module">
    </script>
   </body>
  </html>
  
  '''
# ---
# name: test_files_endpoint
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Yaks in ./test_data/mock_djot_files
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/files">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/files">
           Yaks
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <h1>
       Yaks in ./test_data/mock_djot_files
      </h1>
      <p>
       Showing 4 of 4 yaks (Page 1 of 1)
      </p>
      <div class="sort-controls">
       <span class="sort-controls__label">
        Sort by:
       </span>
       <a class="button button--sm button--primary" href="/files?sort_by=name">
        Name (Created At)
       </a>
       <a class="button button--sm" href="/files?sort_by=modified_date">
        Modified Date
       </a>
      </div>
      <div class="filter-controls">
       <span class="filter-controls__label">
        Filter by category:
       </span>
       <a class="button button--sm button--primary" href="/files?sort_by=name">
        All
       </a>
       <a class="button button--sm" href="/files?sort_by=name&amp;category=mock_djot_files">
        mock_djot_files
       </a>
       <a class="button button--sm" href="/files?sort_by=name&amp;category=subdirectory-2">
        subdirectory-2
       </a>
       <a class="button button--sm" href="/files?sort_by=name&amp;category=subdirectory-3">
        subdirectory-3
       </a>
      </div>
      <div class="cards">
       <a class="card" href="/edit?file=/Users/kyleking/Developer/kyleking/yak-shears-py/tests/test_data/mock_djot_files/subdirectory-3/file3.dj">
        <div class="card__body">
         <p>
          # File 3  This is a test file number 3  Unrelated to file 1 or file 2
         </p>
        </div>
        <div class="card__actions">
         <span class="badge">
          2025-05-01 10:00:00
         </span>
         <span class="badge">
          subdirectory-3
         </span>
        </div>
       </a>
       <a class="card" href="/edit?file=/Users/kyleking/Developer/kyleking/yak-shears-py/tests/test_data/mock_djot_files/subdirectory-2/file2.dj">
        <div class="card__body">
         <p>
          # File 2  &lt;https://www.ecosia.org/search?method=index&amp;q=file&gt;  This is a test file number 2
         </p>
        </div>
        <div class="card__actions">
         <span class="badge">
          2025-05-01 10:00:00
         </span>
         <span class="badge">
          subdirectory-2
         </span>
        </div>
       </a>
       <a class="card" href="/edit?file=/Users/kyleking/Developer/kyleking/yak-shears-py/tests/test_data/mock_djot_files/file1.dj">
        <div class="card__body">
         <p>
          # File 1  &lt;https://www.ecosia.org/search?method=index&amp;q=file&gt;  This is a test file number 1
         </p>
        </div>
        <div class="card__actions">
         <span class="badge">
          2025-05-01 10:00:00
         </span>
         <span class="badge">
          mock_djot_files
         </span>
        </div>
       </a>
       <a class="card" href="/edit?file=/Users/kyleking/Developer/kyleking/yak-shears-py/tests/test_data/mock_djot_files/file0-untracked.dj">
        <div class="card__body">
         <p>
          Placeholder
         </p>
        </div>
        <div class="card__actions">
         <span class="badge">
          2025-05-01 10:00:00
         </span>
         <span class="badge">
          mock_djot_files
         </span>
        </div>
       </a>
      </div>
     </div>
    </main>
   </body>
  </html>
  
  '''
# ---
